apps/unifi/unifi-guest/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-landing
  namespace: unifi
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: unifi-landing
  template:
    metadata:
      labels:
        app: unifi-landing
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: unifi-landing
          image: caddy:2.11.7@sha256:d41fbe1c07bfb1bed6336eff319c602a5fc7f69f3a92f84c231385a8730813ef
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /etc/caddy
              name: unifi-landing
            - mountPath: /var/www
              name: unifi-landing-static
            - mountPath: /config/caddy
              name: tmp
              subPath: conf
            - mountPath: /data/caddy
              name: tmp
              subPath: data
          resources:
            requests:
              memory: 10Mi
              cpu: "5m"
            limits:
              memory: 50Mi
          livenessProbe: &probe
            httpGet:
              path: /landing
              port: http
          readinessProbe: *probe
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
              add: ["NET_BIND_SERVICE"]
      volumes:
        - emptyDir: {}
          name: tmp
        - name: unifi-landing
          configMap:
            name: unifi-landing
        - name: unifi-landing-static
          configMap:
            name: unifi-landing-static
