apps/unifi/unifi-guest/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi-guest
  namespace: unifi
spec:
  parentRefs:
    - name: guest-gateway
      namespace: gateway
  hostnames:
    - unifi.guest.sholdee.net
  rules:
    - backendRefs:
        - name: unifi-landing
          port: 80
          kind: Service
