apps/unifi/unifi-guest/manifests/netpol.yaml
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: unifi-landing
  namespace: unifi
spec:
  endpointSelector:
    matchLabels:
      app: unifi-landing
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
